WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294100
Unreviewed, fix test262 failure
https://bugs.webkit.org/show_bug.cgi?id=294100
Summary
Unreviewed, fix test262 failure
Yusuke Suzuki
Reported
2025-06-05 20:09:48 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2025-06-05 20:10:41 PDT
rradar
Radar WebKit Bug Importer
Comment 2
2025-06-05 20:10:49 PDT
<
rdar://problem/152693423
>
Yusuke Suzuki
Comment 3
2025-06-05 20:11:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46401
EWS
Comment 4
2025-06-05 21:13:54 PDT
Committed
295906@main
(b40d203b0be5): <
https://commits.webkit.org/295906@main
> Reviewed commits have been landed. Closing PR #46401 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug