Unreviewed, fix test262 failure https://bugs.webkit.org/show_bug.cgi?id=294100 rdar://152693423

Fix test262 failure. Template class order was wrong.

* Source/JavaScriptCore/runtime/JSGenericTypedArrayViewPrototypeFunctions.h:

Canonical link: https://commits.webkit.org/295906@main